# rknn_ros2

./: README.md
msg_interfaces/: CMakeLists.txt  package.xml
msg_interfaces/auto/: RGBCameraObstacle.msg
msg_interfaces/navigation_msg_interfaces/: GolbalPathPalnningInterface.msg
msg_interfaces/navigation_srv_interfaces/: GobalNavigationInterface.srv
msg_interfaces/network_msg_interfaces/: NavSelectInterface.msg  RelaySwitchInterface.msg
msg_interfaces/runtime_msg_interfaces/: EmergencyInterface.msg
rknn_2/: CMakeLists.txt  package.xml
rknn_2/include/: rknnPool.hpp
rknn_2/model/: coco_80_labels_list.txt
rknn_2/model/RK3588/: yolov5n.rknn
rknn_2/src/: main.cc  postprocess.cc  web.py
